# chaos-kitten

./: .gitignore  bugs.md  chaos-kitten.checkpoint.json  formatted_bugs_report.md  new_bugs_report.md  out.txt  pr_description.md  pyproject.toml  pytest_out.txt  test_collection.txt  test_output_all.txt  test_output_all_v2.txt  test_spec_differ_out.txt  test_spec_differ_out_v2.txt
chaos_kitten/: cli.py
chaos_kitten/brain/: __init__.py  attack_chainer.py  attack_planner.py  chaos_engine.py  graphql_parser.py  openapi_parser.py  orchestrator.py  poc_generator.py  postman_parser.py  recon.py  spec_differ.py  spider.py  state_machine.py
chaos_kitten/litterbox/: reporter.py
chaos_kitten/paws/: analyzer.py  browser.py  executor.py
docs/: deserialization.md
pocs/: poc_unknown_20260307_153832.py  poc_unknown_20260307_153940.py  poc_unknown_20260307_155416.py  poc_unknown_20260307_175207.py
tests/: test_adaptive_generation.py  test_attack_planner.py  test_chaos_engine.py  test_deserialization_profiles.py  test_interactive_exec.py  test_natural_language_planner.py  test_pdf_export.py  test_poc_generator.py  test_postman_parser.py  test_recon.py  test_spider.py  test_state_machine.py
toys/: deserialization_java.yaml  deserialization_php.yaml  deserialization_python.yaml  deserialization_ruby.yaml  ssrf.yaml
toys/data/: naughty_strings.json
website/: index.html  script.js  style.css
website/sections/: About.html  Getting-Started.html  PrivacyPolicy.html  contributors.html
